# ezpn

./: .commitlintrc.json  .gitignore  .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MAINTENANCE.md  PLAN 2.md  PLAN.md  README.md  SPEC-v0.6.md  deny.toml  rust-toolchain.toml
.cargo/: audit.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labeler.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  perf.yml  security.yml
.github/workflows/: bench.yml  branch-naming.yml  changelog.yml  ci.yml  commitlint.yml  coverage.yml  gitleaks.yml  labeler.yml  release-drafter.yml  release.yml  supply-chain.yml
assets/: default-keymap.toml  demo.tape  hero.tape
assets/themes/: default.toml  ezpn-dark.toml  ezpn-light.toml  gruvbox-dark.toml  nord.toml  solarized-dark.toml  solarized-light.toml  tokyo-night.toml
benches/: protocol_codec.rs  render_hotpaths.rs  rss_proxy.rs  snapshot_io.rs  soak_10min.rs
docs/: README.es.md  README.fr.md  README.ja.md  README.ko.md  README.zh.md  clipboard.md  configuration.md  getting-started.md  migration-from-tmux.md  multi-client-osc.md  scripting.md  security.md  shell-integration.md  terminal-protocol.md
docs/prd/: v0.10.0.md
docs/protocol/: v1.md
docs/rfcs/: 0001-vt100-strategy.md  0002-vt100-commitment.md  0003-ipc-ext-routing.md  0004-vt100-independent-scrollback.md  0005-memory-budget-sla.md  0006-snapshot-v4-schema.md  0007-osc-handler-matrix.md
docs/spec/v0.10.0/: 01-daemon-io-resilience.md  02-scrollback-memory-hygiene.md  03-lifecycle-gc.md  04-snapshot-pipeline-async.md  05-render-loop-micro-perf.md  06-send-keys-api.md  07-event-subscription-stream.md  08-hooks-system.md  09-custom-keymap-toml.md  10-command-palette.md  11-discoverable-ui.md  12-break-pane-join-pane.md  13-copy-mode-upgrades.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: protocol_decode.rs  snapshot_decode.rs
scripts/: coverage.sh
src/: attach.rs  bootstrap.rs  buffers.rs  cli.rs  client.rs  clipboard.rs  commands.rs  config.rs  copy_mode.rs  direct.rs  env_interp.rs  events.rs  fuzzy.rs  hooks.rs  ipc 2.rs  ipc.rs  keymap.rs  layout.rs  main 2.rs  main.rs  observability.rs  pane.rs  project.rs  protocol.rs  render.rs  render_diff.rs  server.rs  session.rs  settings 2.rs  settings.rs  signals.rs  snapshot_blob.rs  socket_security.rs  tab.rs  terminal_state.rs  theme.rs  workspace.rs
src/app/: attach.rs  bootstrap.rs  event_loop.rs  input_dispatch.rs  lifecycle.rs  mod.rs  render_ctl.rs  state.rs
src/cli/: help.rs  mod.rs  parse.rs
src/daemon/: dispatch.rs  event_loop.rs  events.rs  hooks.rs  keys.rs  mod.rs  render.rs  router.rs  snapshot.rs  snapshot_worker.rs  state.rs  writer.rs
src/keymap/: action.rs  keyspec.rs  mod.rs
src/server/: actions.rs  connection.rs  ext_handlers.rs  input_modes.rs  mod.rs  mouse.rs  render_glue.rs
tests/: common.rs  daemon_lifecycle.rs  events.rs  hooks.rs  integration_recordings.rs  property_layout.rs  property_snapshot.rs  send_keys.rs
tests/common/: mod.rs
tests/integration/: attach_smoke.rs  detach_reattach.rs  ipc_version.rs  kill_session.rs  main.rs  multi_client.rs  signal_handling.rs
tests/property/: layout_invariants.rs  main.rs  protocol_roundtrip.rs  workspace_migration.rs
tests/soak/: README.md  run.sh
