[package]
name = "ezpn"
version = "0.8.0"
edition = "2021"
rust-version = "1.82"
autobins = false
description = "Dead simple terminal pane splitting — ezpn 2 3 gives you a 2x3 grid of shells"
license = "MIT"
readme = "README.md"
repository = "https://github.com/subinium/ezpn"
homepage = "https://github.com/subinium/ezpn"
keywords = ["terminal", "pane", "multiplexer", "tui", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "ezpn"
path = "src/main.rs"

[[bin]]
name = "ezpn-ctl"
path = "src/bin/ezpn-ctl.rs"

[dependencies]
portable-pty = "0.8"
vt100 = "0.15"
crossterm = { version = "0.28", features = ["serde"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
unicode-width = "0.2"
flate2 = "1"
bincode = "1.3"
base64 = "0.22"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
signal-hook = "0.3"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
tempfile = "3"
proptest = "1"

[features]
# Opt-in 10-minute soak harness. Excluded from default `cargo bench` so the
# ordinary perf bench (`render_hotpaths`) stays interactive. Enable with
# `cargo bench --features soak --bench soak_10min` (also gated nightly in CI).
soak = []

[[bench]]
name = "render_hotpaths"
harness = false

[[bench]]
name = "soak_10min"
harness = false
required-features = ["soak"]
