[workspace]
# Exclude the cargo-fuzz crate so `cargo build --workspace` from the
# repo root does not require nightly libfuzzer linkage. The fuzz crate
# is a separate workspace addressable via `cargo +nightly fuzz`.
members = ["."]
exclude = ["fuzz"]

[package]
name = "ezpn"
version = "0.5.0"
edition = "2021"
rust-version = "1.82"
autobins = false
description = "Dead simple terminal pane splitting — ezpn 2 3 gives you a 2x3 grid of shells"
license = "MIT"
readme = "README.md"
repository = "https://github.com/subinium/ezpn"
homepage = "https://github.com/subinium/ezpn"
keywords = ["terminal", "pane", "multiplexer", "tui", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "ezpn"
path = "src/main.rs"

[[bin]]
name = "ezpn-ctl"
path = "src/bin/ezpn-ctl.rs"

[features]
# Default: keep the legacy full-frame render path. Cell-grid diff (#93) is
# opt-in until the bench suite proves the bytes-on-wire / CPU tradeoff in
# CI.
default = []
render-diff = []

[dependencies]
portable-pty = "0.8"
vt100 = "0.15"
crossterm = { version = "0.28", features = ["serde"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
# Snapshot v3 scrollback payload (#69): bincode for compact binary
# encoding of `Vec<RowSnapshot>`, gzipped via flate2 for text-heavy
# compression ratios. Pinned to bincode v1 — v2's API rework changes
# the on-disk byte layout, so a bump is a snapshot format break.
bincode = "1.3"
flate2 = "1"
# Pinned: rerank stability is part of the #86 contract — bump deliberately.
nucleo-matcher = "=0.3.1"
unicode-width = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
signal-hook = "0.3"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
assert_cmd = "2"
predicates = "3"
tempfile = "3"
# Property tests for the test-pyramid (issue #94). Pinned to 1.x — the API
# is stable; bumps go through CI like any other dep change.
proptest = "1"

[[bench]]
name = "render_hotpaths"
harness = false

# Perf regression suite (issue #99). Each tracked metric in the issue's
# threshold table is covered by one of these benches; the
# `bench-regression` CI job below compares results against the baseline
# checked into `docs/benchmarks/baseline.json` on `main`.
[[bench]]
name = "protocol_codec"
harness = false

[[bench]]
name = "snapshot_io"
harness = false

[[bench]]
name = "rss_proxy"
harness = false

[[test]]
name = "integration"
path = "tests/integration/main.rs"

# Property-test pyramid (issue #94). Each invariant lives in its own file;
# `tests/property/main.rs` wires them together.
[[test]]
name = "property"
path = "tests/property/main.rs"
